--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -586,19 +586,21 @@ admin:
     form:
       years: Choisir l'année
   course:
+    informations: Informations
     empty_course: Aucun cours trouvé pour ces critères
     course_exist: Il existe déja, pour ce cours, un syllabus de chaque année disponible
     associated_syllabus: Syllabus associés
     year: Année
     title: Titre
     type: Type
-    establishment_code: Code
+    code: Code
     structure: Structure
     action: Action
     course_parents: Cours parents
     course_children: Cours enfants
 
   button:
+    back: Revenir à la page précédente
     display: Afficher
     more_info: Plus d'infos
     add_activity: Ajouter une activité
