--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -576,6 +576,7 @@ app:
 
 admin:
   dashboard:
+    syllabus_dashboard: Syllabus' dashboard
     published_syllabus: Published Syllabus
     syllabus_being_filled: Syllabus being filled
     years_overall: All years overall
@@ -584,6 +585,7 @@ admin:
     form:
       years: Choose the year
   course:
+    list_courses: List of courses
     informations: Informations
     empty_course: No course found for those criterias
     course_exist: It already exist, for this course, a syllabus for every year available
