--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -578,6 +578,7 @@ app:
 
 admin:
   dashboard:
+    syllabus_dashboard: Tableau de bord des syllabus
     published_syllabus: Syllabus publié(s)
     syllabus_being_filled: Syllabus en cours de remplissage
     years_overall: Toutes année confondues
@@ -586,6 +587,7 @@ admin:
     form:
       years: Choisir l'année
   course:
+    list_courses: Liste des cours
     informations: Informations
     empty_course: Aucun cours trouvé pour ces critères
     course_exist: Il existe déja, pour ce cours, un syllabus de chaque année disponible
