--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -290,19 +290,19 @@ app:
   closing_remarks:
     view:
       closing_remarks: Closing remarks
-      edit: Edit
       remarks_message: Message for your students
       closing_video: Integrate a video (or audio)
-      closing_video_info:
-        part1: "In order to be able to integrate a video into your course, please make sure it is hosted on a server external to Moodle (e.g. UNSPOD, Youtube, ...). If that is not the cas, you can ask for help to upload on one of those plateforms."
-        part2: Once it is stored there, you can click on "Share / Integrate" to retrieve the integration link looking like :
-        part3: "&#60 iframe ... &#62 &#60 /iframe &#62"
-        part4: Copy this code and insert it in the "Video" field below. The video will be visible to your students directly on your syllabus.
+      edit: Edit
     form:
       save: Save
       cancel: Cancel
       closing_remarks: "You can leave a message for your students (ex: cheers, last advices...)"
       closing_video: Integrate a video (or audio) respecting copyright law
+      closing_video_info:
+        part1: "In order to be able to integrate a video into your course, please make sure it is hosted on a server external to Moodle (e.g. UNSPOD, Youtube, ...). If that is not the cas, you can ask for help to upload on one of those plateforms."
+        part2: Once it is stored there, you can click on "Share / Integrate" to retrieve the integration link looking like :
+        part3: "&#60 iframe ... &#62 &#60 /iframe &#62"
+        part4: Copy this code and insert it in the "Video" field below. The video will be visible to your students directly on your syllabus.
   presentation:
     view:
       general:
@@ -609,12 +609,21 @@ admin:
     form:
       description: Description
       activityTypes: Activity types
+  activity_type:
+    list_activities_types: List of activities types
+    modes: Modes
+    edit_activity_type: Edit an activity type
+  activity_mode:
+    list_activities_modes: List of activities modes
+    edit_activity_mode: Edit an activity mode
 
   button:
     back: Back to last page
     display: Display
     more_info: More info
     add_activity: Add an activity
+    add_activity_type: Add an activity type
+    add_activity_mode: Add an activity mode
     add_critical_achievement: Add a critical achievement
     add_course: Add a course
     add_syllabus: Add a Syllabus
