--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -628,6 +628,10 @@ admin:
     list_campuses: List of campuses
     edit_campus: Edit a campus
     synchronized: Synchronized
+  domain:
+    list_domains: List of domains
+    edit_domain: Edit a domain
+    structure: Structure
 
   form:
     obsolete: Obsolete
@@ -642,6 +646,7 @@ admin:
     add_campus: Add a campus
     add_course: Add a course
     add_critical_achievement: Add a critical achievement
+    add_domain: Add a domain
     add_syllabus: Add a Syllabus
     add_year: Add an year
     link_course_parents: Link courses as parent
