--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -419,7 +419,6 @@ app:
         duplicate: Are you sure you want to duplicate the section "%title%" ?
         title: Section Title
         url: Link to the course section
-
   view:
     student:
       activities:
@@ -463,6 +462,9 @@ app:
         objectives: Course's objectives
         prerequisites: Prerequisites
         presentation: Course's presentation
+  partial:
+    warning_delete_modal: Are you sure you want to delete this element?
+    no_element: No element has been found
   const:
     cron:
       status:
@@ -481,7 +483,6 @@ app:
       class: In class
       hybrid: Hybrid
       distant: Distant
-
   form:
     notification:
       label:
@@ -656,6 +657,8 @@ admin:
     edit_structure: Edit a structure
   import:
     syllabus: Import Syllabus infos
+    permissions: Import permissions
+    users: Import users
     csv: File format CSV
     description_part1: The file's first line match header and must contains the fields' name to be imported.
     description_part2: Every fields, either the name in the header or for the value must be separated by a semi-colon (;).
@@ -672,6 +675,19 @@ admin:
     mandatory: Obligatoire
     authorized_value: Valeurs autorisées
     description: Description
+  setting:
+    config: Settings
+  group:
+    list_groups: List of groups
+    edit_group: Edit a group
+    actions: Actions
+  job:
+    list_jobs: List of tasks
+    edit_job: Edit a task
+    job_report: Task report :
+    actions:
+      report: Report
+      execute: Execute  
 
   form:
     obsolete: Obsolete
@@ -689,6 +705,8 @@ admin:
     add_critical_achievement: Add a critical achievement
     add_domain: Add a domain
     add_equipment: Add an equipment
+    add_group: Add a group
+    add_job: Add a task
     add_language: Add a language
     add_level: Add a level
     add_period: Add a period
