--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -701,6 +701,9 @@ admin:
     list_notifications: List of notifications
     edit_notification: Edit a notification
     actions: Actions
+  course_info_field:
+    title: List of fields linked to the duplication of the Syllabus
+    empty_field: No field has been registered
 
   form:
     obsolete: Obsolete
