--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -725,6 +725,7 @@ admin:
       firstname: Prénom
       email: Email
       roles: Groupes
+  translation: Traductions
   notification:
     list_notifications: Liste des notifications
     edit_notification: Modifier une notification
