--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -725,6 +725,7 @@ admin:
       firstname: Firstname
       email: Email
       roles: Groups
+  translation: Translations
   notification:
     list_notifications: List of notifications
     edit_notification: Edit a notification
